[tool.poetry]
name = "pyggdrasil"
version = "0.1.0"
description = ""
authors = ["Computational Biology Group"]
readme = "README.md"
packages = [{include = "pyggdrasil", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
anytree = "^2.8.0"
jax = "^0.4.4"
jaxlib = "^0.4.4"
numpy = "^1.23.0"
typing-extensions = "^4.5.0"
llvmlite = "^0.39.1"
scphylo-tools = {git = "https://github.com/pawel-czyz/scphylo-tools.git"}
pydot = "^1.4.2"
matplotlib = "^3.7.1"
xarray = "^2023.4.2"
datetime = "^5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ruff = "^0.0.253"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
pre-commit = "^3.1.0"
interrogate = "^1.5.0"
pyright = "^1.1.296"
networkx = "^3.0"

[tool.coverage.report]
fail_under = 85.0

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
