[tool.poetry]
name = "pyggdrasil"
version = "0.2.0"
description = "Inference and analysis of mutation trees in Python with SCITE"
authors = ["Gordon J. Köhn <gkoehn@student.ethz.ch>", "Paweł Czyż <pawelpiotr.czyz@ai.ethz.ch>",]
readme = "README.md"
packages = [{include = "pyggdrasil", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
anytree = "^2.8.0"
jax = "^0.4.4"
jaxlib = "^0.4.4"
numpy = "^1.23.0"
typing-extensions = "^4.5.0"
llvmlite = "^0.39.1"
scphylo-tools = {git = "https://github.com/gordonkoehn/scphylo-tools.git"}
pydot = "^1.4.2"
matplotlib = "^3.7.1"
xarray = "^2023.4.2"
datetime = "^5.1"
pytz = "^2023.3"
pydantic = "^1.10.7"
cyvcf2 = "^0.30.20"
tqdm = "^4.65.0"
networkx = "^3.0"
arviz = "^0.16.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ruff = "^0.0.253"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
pre-commit = "^3.1.0"
interrogate = "^1.5.0"
pyright = "^1.1.309, <1.1.334" # 1.1.334 calls some false-positive errors in visualize/_mcmc.
mkdocs-material = "^9.1.6"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"

[tool.coverage.report]
fail_under = 85.0

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
